deploy/dbservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbservice
  labels:
    app: dbservice
spec:
  selector:
    matchLabels:
      app: dbservice
  replicas: 3
  template:
    metadata:
      labels:
        app: dbservice

    spec:
      restartPolicy: Always
      containers:
        - name: dbservice
          image: besanouno/kdemo-dbservice:1.0
          ports:
            - containerPort: 8765
              name: dbservice
---
apiVersion: v1
kind: Service
metadata:
  name: dbservice
  labels:
    app: dbservice
spec:
  type: ClusterIP
  ports:
    - port: 8765
  selector:
    app: dbservice
