deploy/noteservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noteservice
  labels:
    app: noteservice
spec:
  selector:
    matchLabels:
      app: noteservice
  replicas: 3
  template:
    metadata:
      labels:
        app: noteservice
    spec:
      restartPolicy: Always
      containers:
        - name: noteservice
          image: besanouno/kdemo-noteservice:1.0
          ports:
            - containerPort: 8901
              name: noteservice
---
apiVersion: v1
kind: Service
metadata:
  name: noteservice
  labels:
    app: noteservice
spec:
  type: ClusterIP
  ports:
    - port: 8901
  selector:
    app: noteservice
