deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: test-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /notes
        backend:
          serviceName: noteservice
          servicePort: 8901
